Warn the user when rendering an animation to gif with framerate > 50

This also disables the video options button if the current format
is gif, since there are no extra options for rendering to gif, and
removes the extra options for gif in the videosaver, so we don't
get unusable arguments like baseline profile for gif.

BUG:403873